# dotaws

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/scripts/powershell/: create-new-feature.ps1
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
specs/001-aws-helper-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-aws-helper-cli/checklists/: requirements.md
specs/001-aws-helper-cli/contracts/: cli-contract.md
specs/002-auto-export-env/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auto-export-env/checklists/: requirements.md
specs/002-auto-export-env/contracts/: cli-contract-delta.md
src/dotaws/: __init__.py
src/dotaws/auth/: __init__.py  credential_export.py  mfa.py  profile_discovery.py  session_service.py  sso.py
src/dotaws/cli/: app.py
src/dotaws/cli/commands/: __init__.py  hooks.py  login.py
src/dotaws/cli/presenters/: __init__.py  login_presenter.py
src/dotaws/project/: __init__.py  profile_marker.py  prompt_state.py
src/dotaws/shared/: errors.py  io.py  models.py
src/dotaws/shell/: __init__.py  bash.py  detection.py  powershell.py  zsh.py
tests/: conftest.py
tests/contract/: test_hook_contract.py  test_login_contract.py
tests/integration/: test_auto_login_prompt.py  test_auto_login_suppression.py  test_login_auto_export.py  test_login_interactive.py  test_login_mfa_retry.py  test_login_mfa_success.py  test_login_profile_precedence.py  test_login_sso.py  test_non_interactive_failfast.py  test_shell_posix.py  test_shell_powershell.py
tests/unit/: test_mfa.py  test_profile_marker.py  test_sso.py
