[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "dotaws"
version = "0.1.0"
description = "Cross-shell AWS helper CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "typer>=0.16.0",
  "rich>=14.0.0",
  "boto3>=1.37.0",
  "botocore>=1.37.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "mypy>=1.15.0",
  "ruff>=0.11.0",
]

[project.scripts]
dotaws = "dotaws.cli.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/dotaws"]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
